Clean up and cache clue textures

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="scene"></div>
     <!-- <div id="export">Export!</div>
     <input id="name" /> -->
+    <canvas id="2d-canvas" />
     <script src="./index.js"></script>
   </body>
 </html>
