--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
     <link type="text/css" rel="stylesheet" href="./main.css" />
+    <link type="text/css" rel="stylesheet" href="./patterns.css" />
   </head>
   <body>
     <div id="root"></div>
